[package]
name = "secured"
version = "0.5.1"
edition = "2021"
authors = ["mikesposito"]
license = "MIT"
description = "A lightweight, easy-to-use Rust package for file encryption and decryption, suitable for both CLI and library integration in Rust applications."
repository = "https://github.com/mikesposito/secured/"
keywords = ["crypto", "encrypt", "decrypt", "cipher", "password"]

[workspace]
members = ["enclave", "cipher", "cipher/key", "benches"]

[dependencies.enclave]
package = "secured-enclave"
path = "enclave"
version = "0.5.1"

[dependencies.cipher]
package = "secured-cipher"
path = "cipher"
version = "0.4.0"

[dependencies.clap]
version = "^4.0.0"
features = ["derive"]

[dependencies.rpassword]
version = "^7.3.1"

[dependencies.glob]
version = "^0.3.0"

[dependencies.indicatif]
version = "^0.17.0"

[dependencies.hex]
version = "^0.4.3"

[[bin]]
name = "secured"
path = "src/main.rs"

[profile.bench]
debug = true
