[package]
name = "secured-cipher"
version = "0.4.0"
authors = ["mikesposito"]
repository = "https://github.com/mikesposito/secured/"
edition = "2021"
license = "MIT"
description = "Pure Rust implementation of the ChaCha cipher family"

[dependencies.secured-cipher-key]
package = "secured-cipher-key"
path = "./key"
version = "0.2.0"

[dependencies.rayon]
version = "1.8.0"
