[package]
name = "secured-cipher"
version = "0.4.1"
authors = ["mikesposito"]
repository = "https://github.com/mikesposito/secured/"
edition = "2021"
license = "MIT"
description = "Pure Rust implementation of the ChaCha cipher family"

[dependencies.secured-cipher-key]
package = "secured-cipher-key"
path = "./key"
version = "0.3.0"

[dependencies.rayon]
version = "1.9.0"
