[package]
name = "secured-enclave"
version = "0.5.0"
authors = ["mikesposito"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mikesposito/secured/"
description = "Ergonomic library for secure encryption and decryption of data in Rust."

[dependencies.secured-cipher]
version = "0.3.1"
path = "../cipher"
