[package]
name = "secured-cipher-key"
version = "0.1.0"
authors = ["mikesposito"]
edition = "2021"
license = "MIT"
description = "An helper to generate generic encryption keys from a password"

[dependencies.hmac]
version = "~0.12.1"

[dependencies.pbkdf2]
version = "~0.12.2"

[dependencies.rand_core]
version = "~0.6.4"
features = ["getrandom"]

[dependencies.sha2]
version = "~0.10.5"